# mc-classifier-pipeline

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: python_package.yml
configs/: README.md  quick_test.json
data/: .gitignore  SoJosources.csv  bbc_article.txt  bbc_article_f.txt  boston_globe_article_f.txt  yale_360_article.txt  yale_360_article_f.txt
docs/: conf.py  index.rst
ml_backend/: __init__.py  api.py  cache.py  model.py  response.py  server.py  utils.py  wsgi.py
ml_backend/default_configs/: model.py  test_api.py
ml_backend/examples/bert_classifier/: _wsgi.py  docker-compose.yml  model.py  test_api.py
ml_backend/examples/sklearn_text_classifier/: _wsgi.py  docker-compose.yml  model.py  test_api.py
ml_backend/examples/sklearn_text_classifier/data/server/models/: cache.db
notebooks/: exploration.ipynb
src/: exploration.ipynb
src/cdstemplate/: corpus_counter_script.py  word_count.py
src/mc_classifier_pipeline/: LS_uploader.py  __init__.py  annotation_analysis.py  base_classifier.py  bert_binary_recipe.py  bert_recipe.py  doc_retriever.py  evaluation.py  inference.py  label_studio_uploader.py  model_orchestrator.py  prediction.py  preprocessing.py  query_keyword_expander.py  run_pipeline.py  sk_naive_bayes_recipe.py  trainer.py  utils.py
testing_code_to_be_refactored/: .gitignore  feminicide_notebook.ipynb  url_retrieval.py
tests/: test_doc_retriever.py  test_dummy.py
